--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-window": "^1.8.1",
     "@types/redux": "^3.6.0",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
@@ -23,6 +24,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "react-window": "^1.8.5",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
@@ -32,6 +34,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://localhost:5002",
   "eslintConfig": {
     "extends": "react-app"
   },
